# BasalCell

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  README.rst  cookiecutter.json  pyproject.toml  tox.ini
.github/: pull_request_template.md
.github/workflows/: quality_checks.yml  test.yml
docs/: Makefile
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_template.py
{{cookiecutter.__Project_Slug}}/: .Renviron  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  DESCRIPTION  Makefile  README.md  _pkgdown.yml  environment.yml  launch_jupyter.py  pyproject.toml  setup_r_env.sh
{{cookiecutter.__Project_Slug}}/.github/: pull_request_template.md
{{cookiecutter.__Project_Slug}}/.github/workflows/: test.yml
{{cookiecutter.__Project_Slug}}/docs/: conf.py  index.md
{{cookiecutter.__Project_Slug}}/docs/jupyternb/: {{cookiecutter.__project_slug}}_rtools  {{cookiecutter.__project_slug}}_tools
{{cookiecutter.__Project_Slug}}/tests/: testthat.R
{{cookiecutter.__Project_Slug}}/{{cookiecutter.__project_slug}}_rtools/: DESCRIPTION  _pkgdown.yml
{{cookiecutter.__Project_Slug}}/{{cookiecutter.__project_slug}}_rtools/vignettes/: example.Rmd
{{cookiecutter.project_name}}/: .gitignore  Dockerfile  Makefile  README.md  _auth.sh  auth.sh  docker-compose.yml  init.sh  jupyter.sh  linux_deps.sh  py_docker-compose.yml  rstudio.sh
{{cookiecutter.project_name}}/both/: Dockerfile  Makefile  docker-compose.yml  init.sh  jupyter.sh  linux_deps.sh
{{cookiecutter.project_name}}/both/{{cookiecutter.project_name}}_py/: Dockerfile
{{cookiecutter.project_name}}/both/{{cookiecutter.project_name}}_r/: Dockerfile
{{cookiecutter.project_name}}/build_both/: Dockerfile  Makefile  docker-compose.yml  init.sh
{{cookiecutter.project_name}}/build_jup/: Makefile  docker-compose.yml  init.sh
{{cookiecutter.project_name}}/build_rs/: Dockerfile  Makefile  docker-compose.yml  init.sh
{{cookiecutter.project_name}}/jup/: Dockerfile  Makefile
{{cookiecutter.project_name}}/rs/: Makefile  docker-compose.yml  rstudio.sh
{{cookiecutter.project_name}}/utils/: export_deps.R  install_deps.R
{{cookiecutter.project_name}}/utils/jup/: flake8
