[tool.poetry]
name = "basalcell"
version = "0.1.0"
description = ""
authors = ["yo-aka-gene <yujiokano@keio.jp>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/yo-aka-gene/BasalCell"
keywords = ["basalcell", "bioinformatics"]
include = [
    "tests/",
    "docs/"
]
exclude = [
    "**/__pycache__",
    "**/*.py[co]"
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
tox-gh-actions = "^2.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^5.0.4"
tox = "^3.27.0"
sphinx = "^5.3.0"
watchdog = "^2.1.9"
bump2version = "^1.0.1"
wheel = "^0.37.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
