[project]
name = "basalcell"
version = "0.1.0"
description = "A project scaffold generator for bioinformatics analysis"
authors = [
    {name = "yo-aka-gene",email = "yujiokano@keio.jp"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "cookiecutter (>=2.7.1,<3.0.0)",
    "pytest-cookies (>=0.7.0,<0.8.0)"
]
