[project]
name = "basalcell"
version = "0.1.0"
description = "A project scaffold generator for bioinformatics analysis"
authors = [
    {name = "yo-aka-gene",email = "yujiokano@keio.jp"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "cookiecutter (>=2.7.1,<3.0.0)",
    "pytest-cookies (>=0.7.0,<0.8.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "ruff (>=0.15.10,<0.16.0)"
]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [".*cookiecutter.*", "logo"]

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["hooks", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["{{cookiecutter.__Project_Slug}}", ".*", "build", "dist"]
